# nfenginedeps

./: .gitignore  CMakeLists.txt  Deps.sln  README.md  TEST  project.config
AntTweakBar/: CMakeLists.txt
AntTweakBar/include/: AntTweakBar.h
AntTweakBar/src/: AntTweakBar.vcxproj  TwDirect3D11.cpp
FreeType/: freetype - Kopia.vcxproj  freetype.vcxproj  freetype.vcxproj.filters
Scripts/: clean-all.sh  clean-cmake.sh  clean.sh  rebuild-all.sh
bullet/: CMakeLists.txt
bullet/build3/vs2010/: Bullet3Collision.vcxproj  Bullet3Collision.vcxproj.filters  Bullet3Common.vcxproj  Bullet3Common.vcxproj.filters  Bullet3Dynamics.vcxproj  Bullet3Dynamics.vcxproj.filters  Bullet3Geometry.vcxproj  Bullet3Geometry.vcxproj.filters  Bullet3OpenCL_clew.vcxproj  Bullet3OpenCL_clew.vcxproj.filters  BulletCollision.vcxproj  BulletCollision.vcxproj.filters  BulletDynamics.vcxproj  BulletDynamics.vcxproj.filters  BulletSoftBody.vcxproj  BulletSoftBody.vcxproj.filters  LinearMath.vcxproj  LinearMath.vcxproj.filters
bullet/src/Bullet3Collision/: CMakeLists.txt
bullet/src/Bullet3Common/: CMakeLists.txt
bullet/src/Bullet3Dynamics/: CMakeLists.txt
bullet/src/Bullet3Geometry/: CMakeLists.txt
bullet/src/Bullet3OpenCL/: CMakeLists.txt
bullet/src/Bullet3Serialize/Bullet2FileLoader/: CMakeLists.txt
bullet/src/BulletCollision/: CMakeLists.txt
bullet/src/BulletDynamics/: CMakeLists.txt
bullet/src/BulletSoftBody/: CMakeLists.txt
bullet/src/LinearMath/: CMakeLists.txt  btAlignedAllocator.h
glslang/: CMakeLists.txt
glslang/OGLCompilersDLL/: CMakeLists.txt  OGLCompiler.vcxproj  OGLCompilersDLL.vcxproj  OGLCompilersDLL.vcxproj.filters
glslang/SPIRV/: CMakeLists.txt  SPIRV.vcxproj  SPIRV.vcxproj.filters  disassemble.h
glslang/glslang/: CMakeLists.txt  glslang.vcxproj  glslang.vcxproj.filters
glslang/glslang/OSDependent/Unix/: CMakeLists.txt
glslang/hlsl/: CMakeLists.txt  hlsl.vcxproj  hlsl.vcxproj.filters
gtest/: CMakeLists.txt  gtest.vcxproj  gtest.vcxproj.filters
gtest/include/gtest/internal/: gtest-tuple.h
imgui/: imgui.vcxproj  imgui.vcxproj.filters
jpeg/: CMakeLists.txt  jpeg.vcxproj  jpeg.vcxproj.filters  jpgd.cpp
libpng/: CMakeLists.txt  libpng.vcxproj  libpng.vcxproj.filters  pnglibconf.h
model_obj/: CMakeLists.txt  model_obj.cpp  model_obj.vcxproj  model_obj.vcxproj.filters
squish/: CMakeLists.txt  squish.vcxproj  squish.vcxproj.filters
squish/src/: Makefile  squish.h
squish/vs9/squish/: squish.vcxproj
squish/vs9/squish/x64/Debug/: vc120.idb
squish/vs9/squish/x64/Debug/squish.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  squish.lastbuildstate
tinyexr/: tinyexr.h
zlib/: CMakeLists.txt  zlib.vcxproj  zlib.vcxproj.filters
