# @file   CMakeLists.txt
# @author LKostyra (costyrra.xl@gmail.com)
# @brief  Main CMake file for nfEngine Deps

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(nfEngineDeps)

# Pre-define Release build
IF(NOT DEFINED CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF(NOT DEFINED CMAKE_BUILD_TYPE)

# Pre-define 64-bit build platform
IF(NOT DEFINED CMAKE_BUILD_PLATFORM)
    SET(CMAKE_BUILD_PLATFORM "x86_64")
ENDIF(NOT DEFINED CMAKE_BUILD_PLATFORM)

# Set required variables
SET(CMAKE_CXX_FLAGS       "${CMAKE_CXX_FLAGS} -O2 -std=c++0x")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -std=c++0x")

# Add build platform to build flags
IF(CMAKE_BUILD_PLATFORM MATCHES "x86_64")
    SET(CMAKE_CXX_FLAGS       "${CMAKE_CXX_FLAGS} -m64")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -m64")
ELSEIF(CMAKE_BUILD_PLATFORM MATCHES "i386")
    SET(CMAKE_CXX_FLAGS       "${CMAKE_CXX_FLAGS} -m32")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -m32")
ELSE(CMAKE_BUILD_PLATFORM MATCHES "x86_64")
    MESSAGE("Incorrect build configuration provided: ${CMAKE_BUILD_PLATFORM}")
    MESSAGE("If you want specific build platform, select from following: x86_64, i386")
    MESSAGE(FATAL_ERROR "Stopping Makefile generation.")
ENDIF(CMAKE_BUILD_PLATFORM MATCHES "x86_64")

# If any macros specific to project are needed, prefix them with NFEDEPS_
SET(NFEDEPS_ROOT_DIRECTORY ${CMAKE_SOURCE_DIR})
SET(NFEDEPS_OUTPUT_DIRECTORY 
    ${NFEDEPS_ROOT_DIRECTORY}/Bin/${CMAKE_BUILD_PLATFORM}/${CMAKE_BUILD_TYPE})

# Building outputs
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${NFEDEPS_OUTPUT_DIRECTORY})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${NFEDEPS_OUTPUT_DIRECTORY})

MESSAGE("Creating Makefile for nfEngine Deps")

MESSAGE("Output path is ${NFEDEPS_OUTPUT_DIRECTORY}")
MESSAGE("Build type is ${CMAKE_BUILD_TYPE}")

# Add all projects
ADD_SUBDIRECTORY("AntTweakBar")
ADD_SUBDIRECTORY("bullet")
#ADD_SUBDIRECTORY("FreeType") # TODO FINISH
ADD_SUBDIRECTORY("gtest")
ADD_SUBDIRECTORY("jpeg")
ADD_SUBDIRECTORY("libpng")
ADD_SUBDIRECTORY("model_obj")
ADD_SUBDIRECTORY("squish")
ADD_SUBDIRECTORY("zlib")

FILE(MAKE_DIRECTORY ${NFEDEPS_OUTPUT_DIRECTORY})
