# @file   CMakeLists.txt
# @author mkkulagowski (mk.kulagowski(at)gmail.com)
# @brief  CMakeLists for libsquish

FILE(GLOB SQUISH_SOURCES *.cpp)
FILE(GLOB SQUISH_HEADERS *.h)

INCLUDE_DIRECTORIES(src)

ADD_LIBRARY(squish ${GTEST_SOURCES} ${GTEST_HEADERS})

#Flags for Fedora
SET_TARGET_PROPERTIES(squish PROPERTIES COMPILE_FLAGS -DSQUISH_USE_SSE=2)
SET_TARGET_PROPERTIES(squish PROPERTIES COMPILE_FLAGS -msse)

#Flags for MacOS
#SET_TARGET_PROPERTIES(squish PROPERTIES COMPILE_FLAGS -DSQUISH_USE_ALTIVEC=1)
#SET_TARGET_PROPERTIES(squish PROPERTIES COMPILE_FLAGS -maltivec)

ADD_CUSTOM_COMMAND(TARGET squish POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:squish> ${NFEDEPS_OUTPUT_DIRECTORY}/${targetfile})